Fix spacing parsing

--- a/src/functions/_get-spacing.scss
+++ b/src/functions/_get-spacing.scss
@@ -11,36 +11,29 @@
 	}
 
 	@each $value in $values {
-		@if type-of($value) == 'string' and index(map-keys($spacing), $value) {
 
-			$negative: false;
+		$negative: false;
+		$value: string($value);
 
-			@if str-index($value, '-') == 1 {
-				$negative: true;
-				$value: str-slice($value, 2);
-			}
-
-			$spacingValue: map-get($spacing, $value);
-
-			@if $negative {
-				$spacingValue: to-negative($spacingValue);
-			}
-
-			$spacingValue: x-to-px($spacingValue);
-
-			@if $spacingValue != null {
-				$list: append($list, $spacingValue);
-			}
-		
-		} @else {
-			
-			$value: x-to-px($value);
-
-			@if $value != null {
-				$list: append($list, $value);
-			}
-
+		@if str-index($value, '-') == 1 {
+			$negative: true;
+			$value: str-slice($value, 2);
 		}
+		
+		@if type-of($value) == 'string' and index(map-keys($spacing), $value) {
+			$value: map-get($spacing, $value);
+		}
+
+		@if $negative {
+			$value: to-negative($value);
+		}
+		
+		$value: x-to-px($value);
+
+		@if $value != null {
+			$list: append($list, $value);
+		}
+
 	}
 
 	@if length($list) == 1 {
